--- a/figma/ZEN/sass/footer.sass
+++ b/figma/ZEN/sass/footer.sass
@@ -49,6 +49,9 @@
         height: 100%
         line-height: 15px
 
+.footer-line
+    border-top: 1px solid rgba(151, 151, 151, 0.2)
+
 @media ( max-width: 700px )
     .footerZEN-menu
         display: block
