--- a/figma/ZEN/sass/header.sass
+++ b/figma/ZEN/sass/header.sass
@@ -84,3 +84,26 @@
                 font-weight: 400
                 font-size: 18px
                 color: #222
+
+@media ( max-width: 1050px )
+    .headerZEN-RIGHT-button
+        display: block
+        width: 90px
+        height: 36px
+
+        &-text
+            margin-top: 5px
+
+    .headerZEN-LEFT-img-mastercard
+        img
+            width: 60px
+            height: 36px
+
+    .headerZEN-LEFT-img-Fill
+        img
+            width: 36px
+            height: 36px
+
+    .headerZEN-LEFT-img
+        width: 115px
+        height: 36px
