--- a/figma/ZEN/sass/footer.sass
+++ b/figma/ZEN/sass/footer.sass
@@ -51,6 +51,7 @@
 
 .footer-line
     border-top: 1px solid rgba(151, 151, 151, 0.2)
+    margin-top: 68px
 
 @media ( max-width: 700px )
     .footerZEN-menu
@@ -61,7 +62,37 @@
             display: block
 
             &-topic
+                margin-top: 30px
                 text-align: center
+                font-size: 24px
+                font-weight: 600
 
             &-content
+                margin-top: 10px
                 text-align: center
+                padding-bottom: 10px
+
+                &-list
+
+                    li
+                        a
+                            font-size: 18px
+
+                &-email
+                    font-size: 18px
+                    padding-bottom: 7px
+
+    .footerZEN-under-text
+        text-align: center
+
+    .footerZEN-under-img
+        margin: 0 auto
+
+    .footerZEN-under img
+        margin: 0 auto
+
+    .footerZEN-long-img img
+        margin: 0 auto
+        padding: 0
+        display: flex
+        justify-content: center
