--- a/figma/ZEN/sass/ZenGlobal.sass
+++ b/figma/ZEN/sass/ZenGlobal.sass
@@ -16,17 +16,27 @@ html
 
     &-text
         color: #222
+        transition: 0.5s
+        cursor: pointer
 
         &-h1
             font-weight: 400
             font-size: 36px
             line-height: 34px
+            transition: 0.5s
+
+            &:hover
+                color: #ff6781
 
         &-text
             padding: 22px 0
             width: 470px
             font-weight: 400
             font-size: 18px
+            transition: 0.5s
+
+            &:hover
+                color: #ff6781
 
 .sectionZEN-img
     img
