--- a/figma/ZEN/sass/sectionZEN-Cashbask.sass
+++ b/figma/ZEN/sass/sectionZEN-Cashbask.sass
@@ -7,6 +7,11 @@
         color: #222
         text-align: center
         margin: 0 auto
+        transition: 0.5s
+        cursor: pointer
+
+        &:hover
+            color: #ff6781
 
     &-text
         color: #222
@@ -16,6 +21,11 @@
         margin: 0 auto
         padding-bottom: 58px
         padding-top: 20px
+        cursor: pointer
+        transition: 0.5s
+
+        &:hover
+            color: #ff6781
 
     &-button
         width: 237px
