--- a/css/style.css
+++ b/css/style.css
@@ -3100,17 +3100,27 @@ html {
 }
 .sectionZEN-common-text {
   color: #222;
+  transition: 0.5s;
+  cursor: pointer;
 }
 .sectionZEN-common-text-h1 {
   font-weight: 400;
   font-size: 36px;
   line-height: 34px;
+  transition: 0.5s;
+}
+.sectionZEN-common-text-h1:hover {
+  color: #ff6781;
 }
 .sectionZEN-common-text-text {
   padding: 22px 0;
   width: 470px;
   font-weight: 400;
   font-size: 18px;
+  transition: 0.5s;
+}
+.sectionZEN-common-text-text:hover {
+  color: #ff6781;
 }
 
 .sectionZEN-img img {
@@ -3152,6 +3162,10 @@ html {
   color: black;
   font-weight: 400;
   font-size: 16px;
+  transition: 0.5s;
+}
+.sectionZEN-common-text-textUp:hover {
+  color: #ff6781;
 }
 .sectionZEN-common-text-h1 {
   margin-top: 23px;
@@ -3170,6 +3184,10 @@ html {
   color: #222;
   width: 400px;
   height: 52px;
+  transition: 0.5s;
+}
+.sectionZEN-common-text-textUnder:hover {
+  color: #ff6781;
 }
 .sectionZEN-common-text-buttonApps {
   margin-top: 15px;
@@ -3286,6 +3304,11 @@ html {
   color: #222;
   text-align: center;
   margin: 0 auto;
+  transition: 0.5s;
+  cursor: pointer;
+}
+.sectionZEN-Cashbask-h1:hover {
+  color: #ff6781;
 }
 .sectionZEN-Cashbask-text {
   color: #222;
@@ -3295,6 +3318,11 @@ html {
   margin: 0 auto;
   padding-bottom: 58px;
   padding-top: 20px;
+  cursor: pointer;
+  transition: 0.5s;
+}
+.sectionZEN-Cashbask-text:hover {
+  color: #ff6781;
 }
 .sectionZEN-Cashbask-button {
   width: 237px;
@@ -3387,6 +3415,11 @@ html {
   font-size: 16px;
   font-weight: 400;
   color: #222;
+  cursor: pointer;
+  transition: 0.5s;
+}
+.footerZEN-menu-common-topic:hover {
+  color: #ff6781;
 }
 .footerZEN-menu-common-content {
   margin-top: 33px;
@@ -3398,10 +3431,18 @@ html {
   font-weight: 400;
   line-height: 19px;
   color: #000;
+  cursor: pointer;
+  transition: 0.5s;
+}
+.footerZEN-menu-common-content-list li a:hover {
+  color: #ff6781;
 }
 .footerZEN-menu-common-content-img {
   display: flex;
   justify-content: center;
+}
+.footerZEN-menu-common-content-img img {
+  border-radius: 0;
 }
 .footerZEN-menu-common-content-email {
   font-weight: 400;
