--- a/figma/ZEN/sass/footer.sass
+++ b/figma/ZEN/sass/footer.sass
@@ -10,6 +10,11 @@
             font-size: 16px
             font-weight: 400
             color: #222
+            cursor: pointer
+            transition: 0.5s
+
+            &:hover
+                color: #ff6781
 
         &-content
             margin-top: 33px
@@ -24,10 +29,18 @@
                         font-weight: 400
                         line-height: 19px
                         color: #000
+                        cursor: pointer
+                        transition: 0.5s
+
+                        &:hover
+                            color: #ff6781
 
             &-img
                 display: flex
                 justify-content: center
+
+                img
+                    border-radius: 0
 
             &-email
                 font-weight: 400
