--- a/figma/ZEN/sass/section1.sass
+++ b/figma/ZEN/sass/section1.sass
@@ -11,6 +11,10 @@
             color: black
             font-weight: 400
             font-size: 16px
+            transition: 0.5s
+
+            &:hover
+                color: #ff6781
 
         &-h1
             margin-top: 23px
@@ -29,6 +33,10 @@
             color: #222
             width: 400px
             height: 52px
+            transition: 0.5s
+
+            &:hover
+                color: #ff6781
 
         &-buttonApps
             margin-top: 15px
