--- a/figma/ZEN/sass/company.sass
+++ b/figma/ZEN/sass/company.sass
@@ -15,6 +15,11 @@
             display: flex
             justify-content: center
             align-items: center
+            transition: 0.5s
+            cursor: pointer
+
+            &:hover
+                transform: scale(1.2)
 
 @media ( max-width: 1050px )
     .company-all
