--- a/figma/SOS/sass/sectionThreeExperimental.sass
+++ b/figma/SOS/sass/sectionThreeExperimental.sass
@@ -11,8 +11,8 @@
     position: absolute
     color: white
     text-transform: uppercase
-    top: 169px
-    left: 800px
+    top: 17%
+    left: 52%
     font-family: Bebas Neue
     font-weight: 700
     font-size: 24px
@@ -22,8 +22,8 @@
     position: absolute
     color: white
     text-transform: uppercase
-    top: 208px
-    left: 800px
+    top: 23%
+    left: 52%
     font-family: Bebas Neue
     font-weight: 700
     font-size: 80px
@@ -37,8 +37,8 @@
 
 .s3block1
     position: absolute
-    top: 350px
-    left: 842px
+    top: 40%
+    left: 52%
     cursor: pointer
 
     .s3h1
@@ -59,8 +59,8 @@
 
 .s3block2
     position: absolute
-    top: 500px
-    left: 842px
+    top: 56%
+    left: 52%
     cursor: pointer
 
     .s3h2
@@ -82,8 +82,8 @@
 
 .s3block3
     position: absolute
-    top: 573px
-    left: 842px
+    top: 62%
+    left: 52%
     cursor: pointer
 
     .s3text3
