--- a/css/style.css
+++ b/css/style.css
@@ -2201,8 +2201,8 @@ html:hover .spider {
   position: absolute;
   color: white;
   text-transform: uppercase;
-  top: 256px;
-  left: 122px;
+  top: 25%;
+  left: 12%;
   font-size: 24px;
   font-family: Bebas Neue;
 }
@@ -2211,8 +2211,8 @@ html:hover .spider {
   color: white;
   text-transform: uppercase;
   font-size: 50px;
-  top: 293px;
-  left: 120px;
+  top: 28%;
+  left: 12%;
   line-height: 80px;
   width: 600px;
   font-weight: 700;
@@ -2222,8 +2222,8 @@ html:hover .spider {
 .SectionTwo .textSectionTwo {
   position: absolute;
   color: white;
-  top: 520px;
-  left: 310px;
+  top: 48%;
+  left: 24%;
   font-size: 18px;
   width: 360px;
   text-align: justify;
@@ -2234,8 +2234,8 @@ html:hover .spider {
 
 .photo1 {
   position: absolute;
-  top: 190px;
-  left: 770px;
+  top: 15%;
+  left: 55%;
   z-index: 3;
   cursor: pointer;
 }
@@ -2246,8 +2246,8 @@ html:hover .spider {
 
 .photo2 {
   position: absolute;
-  top: 210px;
-  left: 880px;
+  top: 17%;
+  left: 59%;
   z-index: 2;
   cursor: pointer;
 }
@@ -2258,8 +2258,8 @@ html:hover .spider {
 
 .photo3 {
   position: absolute;
-  top: 230px;
-  left: 1000px;
+  top: 19%;
+  left: 64%;
   cursor: pointer;
 }
 .photo3 img {
@@ -2269,15 +2269,15 @@ html:hover .spider {
 
 .switch-img {
   position: absolute;
-  top: 470px;
-  right: 130px;
+  top: 42%;
+  right: 12%;
   cursor: pointer;
 }
 
 .point1 {
   position: absolute;
-  top: 750px;
-  left: 870px;
+  top: 65%;
+  left: 60%;
   width: 14px;
   height: 14px;
   background-color: white;
@@ -2289,8 +2289,8 @@ html:hover .spider {
 
 .point2 {
   position: absolute;
-  top: 750px;
-  left: 945px;
+  top: 65%;
+  left: 64%;
   width: 14px;
   height: 14px;
   background-color: transparent;
@@ -2302,8 +2302,8 @@ html:hover .spider {
 
 .point3 {
   position: absolute;
-  top: 750px;
-  left: 1020px;
+  top: 65%;
+  left: 68%;
   width: 14px;
   height: 14px;
   background-color: transparent;
@@ -2315,8 +2315,8 @@ html:hover .spider {
 
 .point4 {
   position: absolute;
-  top: 750px;
-  left: 1095px;
+  top: 65%;
+  left: 72%;
   width: 14px;
   height: 14px;
   background-color: transparent;
@@ -2328,8 +2328,8 @@ html:hover .spider {
 
 .point5 {
   position: absolute;
-  top: 750px;
-  left: 1170px;
+  top: 65%;
+  left: 76%;
   width: 14px;
   height: 14px;
   background-color: transparent;
@@ -2874,8 +2874,8 @@ html:hover .spider {
   position: absolute;
   color: white;
   text-transform: uppercase;
-  top: 169px;
-  left: 800px;
+  top: 17%;
+  left: 52%;
   font-family: Bebas Neue;
   font-weight: 700;
   font-size: 24px;
@@ -2886,8 +2886,8 @@ html:hover .spider {
   position: absolute;
   color: white;
   text-transform: uppercase;
-  top: 208px;
-  left: 800px;
+  top: 23%;
+  left: 52%;
   font-family: Bebas Neue;
   font-weight: 700;
   font-size: 80px;
@@ -2903,8 +2903,8 @@ html:hover .spider {
 
 .s3block1 {
   position: absolute;
-  top: 350px;
-  left: 842px;
+  top: 40%;
+  left: 52%;
   cursor: pointer;
 }
 .s3block1 .s3h1 {
@@ -2926,8 +2926,8 @@ html:hover .spider {
 
 .s3block2 {
   position: absolute;
-  top: 500px;
-  left: 842px;
+  top: 56%;
+  left: 52%;
   cursor: pointer;
 }
 .s3block2 .s3h2 {
@@ -2950,8 +2950,8 @@ html:hover .spider {
 
 .s3block3 {
   position: absolute;
-  top: 573px;
-  left: 842px;
+  top: 62%;
+  left: 52%;
   cursor: pointer;
 }
 .s3block3 .s3text3 {
