--- a/figma/SOS/sass/sectionTwo.sass
+++ b/figma/SOS/sass/sectionTwo.sass
@@ -11,8 +11,8 @@
         position: absolute
         color: white
         text-transform: uppercase
-        top: 256px
-        left: 122px
+        top: 25%
+        left: 12%
         font-size: 24px
         font-family: Bebas Neue
 
@@ -21,8 +21,8 @@
         color: white
         text-transform: uppercase
         font-size: 50px
-        top: 293px
-        left: 120px
+        top: 28%
+        left: 12%
         line-height: 80px
         width: 600px
         font-weight: 700
@@ -32,8 +32,8 @@
     .textSectionTwo
         position: absolute
         color: white
-        top: 520px
-        left: 310px
+        top: 48%
+        left: 24%
         font-size: 18px
         width: 360px
         text-align: justify
@@ -43,8 +43,8 @@
 
 .photo1
     position: absolute
-    top: 190px
-    left: 770px
+    top: 15%
+    left: 55%
     z-index: 3
     cursor: pointer
 
@@ -54,8 +54,8 @@
 
 .photo2
     position: absolute
-    top: 210px
-    left: 880px
+    top: 17%
+    left: 59%
     z-index: 2
     cursor: pointer
     img
@@ -64,8 +64,8 @@
 
 .photo3
     position: absolute
-    top: 230px
-    left: 1000px
+    top: 19%
+    left: 64%
     cursor: pointer
     img
         width: 400px
@@ -73,14 +73,14 @@
 
 .switch-img
     position: absolute
-    top: 470px
-    right: 130px
+    top: 42%
+    right: 12%
     cursor: pointer
 
 .point1
     position: absolute
-    top: 750px
-    left: 870px
+    top: 65%
+    left: 60%
     width: 14px
     height: 14px
     background-color: white
@@ -91,8 +91,8 @@
 
 .point2
     position: absolute
-    top: 750px
-    left: 945px
+    top: 65%
+    left: 64%
     width: 14px
     height: 14px
     background-color: transparent
@@ -103,8 +103,8 @@
 
 .point3
     position: absolute
-    top: 750px
-    left: 1020px
+    top: 65%
+    left: 68%
     width: 14px
     height: 14px
     background-color: transparent
@@ -115,8 +115,8 @@
 
 .point4
     position: absolute
-    top: 750px
-    left: 1095px
+    top: 65%
+    left: 72%
     width: 14px
     height: 14px
     background-color: transparent
@@ -127,8 +127,8 @@
 
 .point5
     position: absolute
-    top: 750px
-    left: 1170px
+    top: 65%
+    left: 76%
     width: 14px
     height: 14px
     background-color: transparent
