--- a/figma/ZEN/sass/company.sass
+++ b/figma/ZEN/sass/company.sass
@@ -18,8 +18,11 @@
             transition: 0.5s
             cursor: pointer
 
-            &:hover
-                transform: scale(1.2)
+            img
+                transition: 0.5s
+
+                &:hover
+                    transform: scale(1.2)
 
 @media ( max-width: 1050px )
     .company-all
