--- a/figma/ZEN/sass/footer.sass
+++ b/figma/ZEN/sass/footer.sass
@@ -46,6 +46,11 @@
                 font-weight: 400
                 font-size: 14px
                 color: #000
+                transition: 0.5s
+                cursor: pointer
+
+                &:hover
+                    color: red
 
 .footerZEN-under
     display: flex
