--- a/css/style.css
+++ b/css/style.css
@@ -3007,9 +3007,24 @@ html:hover .spider {
   text-decoration: none;
   color: #222222;
   transition: 0.5s;
+  position: relative;
 }
 .headerZEN-LEFT-link a:hover {
   color: #ff6781;
+}
+.headerZEN-LEFT-link a::before {
+  content: "";
+  bottom: 0;
+  left: 0;
+  position: absolute;
+  width: 100%;
+  height: 1px;
+  background-color: #ff6781;
+  transition: 0.2s;
+  transform: scaleX(0);
+}
+.headerZEN-LEFT-link a:hover:before {
+  transform: scaleX(1);
 }
 .headerZEN-RIGHT {
   display: flex;
@@ -3029,9 +3044,24 @@ html:hover .spider {
   text-decoration: none;
   color: #222;
   transition: 0.5s;
+  position: relative;
 }
 .headerZEN-RIGHT-link a:hover {
   color: #ff6781;
+}
+.headerZEN-RIGHT-link a::before {
+  content: "";
+  bottom: 0;
+  left: 0;
+  position: absolute;
+  width: 100%;
+  height: 1px;
+  background-color: #ff6781;
+  transition: 0.2s;
+  transform: scaleX(0);
+}
+.headerZEN-RIGHT-link a:hover:before {
+  transform: scaleX(1);
 }
 .headerZEN-RIGHT-button {
   width: 135px;
