--- a/figma/ZEN/sass/header.sass
+++ b/figma/ZEN/sass/header.sass
@@ -40,10 +40,24 @@
                 text-decoration: none
                 color: #222222
                 transition: 0.5s
+                position: relative
 
                 &:hover
                     color: #ff6781
 
+                &::before
+                    content: ''
+                    bottom: 0
+                    left: 0
+                    position: absolute
+                    width: 100%
+                    height: 1px
+                    background-color: #ff6781
+                    transition: 0.2s
+                    transform: scaleX(0)
+
+                &:hover:before
+                    transform: scaleX(1)
     &-RIGHT
         display: flex
         justify-content: space-between
@@ -62,9 +76,24 @@
                 text-decoration: none
                 color: #222
                 transition: 0.5s
+                position: relative
 
                 &:hover
                     color: #ff6781
+
+                &::before
+                    content: ''
+                    bottom: 0
+                    left: 0
+                    position: absolute
+                    width: 100%
+                    height: 1px
+                    background-color: #ff6781
+                    transition: 0.2s
+                    transform: scaleX(0)
+
+                &:hover:before
+                    transform: scaleX(1)
 
         &-button
             width: 135px
