--- a/css/style.css
+++ b/css/style.css
@@ -3455,9 +3455,25 @@ html {
   color: #222;
   cursor: pointer;
   transition: 0.5s;
+  position: relative;
+  display: inline-block;
 }
 .footerZEN-menu-common-topic:hover {
   color: #ff6781;
+}
+.footerZEN-menu-common-topic::before {
+  content: "";
+  bottom: 0;
+  left: 0;
+  position: absolute;
+  width: 100%;
+  height: 1px;
+  background-color: #ff6781;
+  transition: 0.2s;
+  transform: scaleX(0);
+}
+.footerZEN-menu-common-topic:hover:before {
+  transform: scaleX(1);
 }
 .footerZEN-menu-common-content {
   margin-top: 33px;
@@ -3526,6 +3542,8 @@ html {
     text-align: center;
     font-size: 24px;
     font-weight: 600;
+    display: flex;
+    justify-content: center;
   }
   .footerZEN-menu-common-content {
     margin-top: 10px;
