--- a/figma/ZEN/sass/footer.sass
+++ b/figma/ZEN/sass/footer.sass
@@ -12,9 +12,25 @@
             color: #222
             cursor: pointer
             transition: 0.5s
+            position: relative
+            display: inline-block
 
             &:hover
                 color: #ff6781
+
+            &::before
+                content: ''
+                bottom: 0
+                left: 0
+                position: absolute
+                width: 100%
+                height: 1px
+                background-color: #ff6781
+                transition: 0.2s
+                transform: scaleX(0)
+
+            &:hover:before
+                transform: scaleX(1)
 
         &-content
             margin-top: 33px
@@ -84,6 +100,8 @@
                 text-align: center
                 font-size: 24px
                 font-weight: 600
+                display: flex
+                justify-content: center
 
             &-content
                 margin-top: 10px
