--- a/css/style.css
+++ b/css/style.css
@@ -2339,7 +2339,111 @@ html:hover .spider {
   cursor: pointer;
 }
 
-/** @import "../figma/SOS/sass/sectionThree" **/
+.SectionThree {
+  display: flex;
+  justify-content: center;
+  min-width: 1000px;
+  min-height: 880px;
+  background-repeat: no-repeat;
+  display: block;
+  background-position: center;
+  background-size: contain;
+  position: relative;
+}
+
+.SOS-S3-container {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.SOS-S3-wrapper {
+  margin: 15% 10% 0 0;
+}
+
+.S3-h1up-text {
+  color: white;
+  text-transform: uppercase;
+  font-family: Bebas Neue;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 24px;
+}
+
+.S3-h1main-text {
+  margin-top: 30px;
+  color: white;
+  text-transform: uppercase;
+  font-family: Bebas Neue;
+  font-weight: 700;
+  font-size: 80px;
+  font-style: normal;
+}
+
+.s3block1 {
+  cursor: pointer;
+}
+.s3block1 .s3h1 {
+  margin-top: 80px;
+  color: #ffb548;
+  font-size: 36px;
+  font-weight: 700;
+  font-family: Bebas Neue;
+  padding: 10px 0;
+}
+.s3block1 .s3text1 {
+  width: 360px;
+  height: 77.7px;
+  color: white;
+  font-weight: 400;
+  font-family: Open Sans;
+  font-size: 19px;
+  text-align: justify;
+}
+
+.s3block2 {
+  cursor: pointer;
+}
+.s3block2 .s3h2 {
+  color: #ffb548;
+  font-size: 36px;
+  font-weight: 700;
+  font-family: Bebas Neue;
+  padding: 10px 0;
+}
+.s3block2 .s3text2 {
+  width: 360px;
+  height: 77.7px;
+  color: white;
+  font-weight: 400;
+  font-family: Open Sans;
+  font-size: 19px;
+  text-align: justify;
+}
+
+.s3block3 {
+  cursor: pointer;
+}
+.s3block3 .s3h3 {
+  color: #ffb548;
+  font-size: 36px;
+  font-weight: 700;
+  font-family: Bebas Neue;
+  padding: 10px 0;
+}
+.s3block3 .s3text3 {
+  width: 360px;
+  height: 77.7px;
+  color: white;
+  font-weight: 400;
+  font-family: Open Sans;
+  font-size: 19px;
+  text-align: justify;
+}
+
+.hidden {
+  display: none;
+}
+
 .SectionFour {
   min-weight: 1000px;
   min-height: 880px;
@@ -2858,113 +2962,6 @@ html:hover .spider {
   margin-top: 1.5px;
   height: 20px;
   border-left: 1px solid white;
-}
-
-.SectionThree {
-  min-weight: 1000px;
-  min-height: 880px;
-  background-repeat: no-repeat;
-  display: block;
-  background-position: center;
-  background-size: contain;
-  position: relative;
-}
-
-.S3-h1up-text {
-  position: absolute;
-  color: white;
-  text-transform: uppercase;
-  top: 17%;
-  left: 52%;
-  font-family: Bebas Neue;
-  font-weight: 700;
-  font-size: 24px;
-  line-height: 24px;
-}
-
-.S3-h1main-text {
-  position: absolute;
-  color: white;
-  text-transform: uppercase;
-  top: 23%;
-  left: 52%;
-  font-family: Bebas Neue;
-  font-weight: 700;
-  font-size: 80px;
-  font-style: normal;
-}
-
-.s3h3 {
-  color: #FFB548;
-  font-size: 36px;
-  font-weight: 700;
-  font-family: Bebas Neue;
-}
-
-.s3block1 {
-  position: absolute;
-  top: 40%;
-  left: 52%;
-  cursor: pointer;
-}
-.s3block1 .s3h1 {
-  color: #FFB548;
-  font-size: 36px;
-  font-weight: 700;
-  font-family: Bebas Neue;
-}
-.s3block1 .s3text1 {
-  margin-top: 20px;
-  width: 360px;
-  height: 77.7px;
-  color: white;
-  font-weight: 400;
-  font-family: Open Sans;
-  font-size: 19px;
-  text-align: justify;
-}
-
-.s3block2 {
-  position: absolute;
-  top: 56%;
-  left: 52%;
-  cursor: pointer;
-}
-.s3block2 .s3h2 {
-  color: #FFB548;
-  font-size: 36px;
-  font-weight: 700;
-  font-family: Bebas Neue;
-}
-.s3block2 .s3text2 {
-  margin-top: 20px;
-  width: 360px;
-  height: 77.7px;
-  color: white;
-  font-weight: 400;
-  font-family: Open Sans;
-  font-size: 19px;
-  text-align: justify;
-  display: none;
-}
-
-.s3block3 {
-  position: absolute;
-  top: 62%;
-  left: 52%;
-  cursor: pointer;
-}
-.s3block3 .s3text3 {
-  margin-top: 20px;
-  width: 360px;
-  height: 77.7px;
-  color: white;
-  font-weight: 400;
-  font-family: Open Sans;
-  font-size: 19px;
-  text-align: justify;
-  transition: 1s;
-  display: none;
 }
 
 .headerZEN {
