add ZEN burger-menu and any fix

--- a/figma/ZEN/sass/footer.sass
+++ b/figma/ZEN/sass/footer.sass
@@ -73,6 +73,7 @@
     justify-content: space-between
     flex-wrap: wrap
     margin-top: 33px
+    padding-bottom: 20px
 
     &-text
 
@@ -82,6 +83,7 @@
         width: 836px
         height: 100%
         line-height: 15px
+        padding-bottom: 10px
 
 .footer-line
     border-top: 1px solid rgba(151, 151, 151, 0.2)
