--- a/sass/style.sass
+++ b/sass/style.sass
@@ -35,7 +35,6 @@
 @import "../figma/SOS/sass/sectionFive"
 @import "../figma/SOS/sass/sectionSix"
 
-@import "../figma/ZEN/sass/header"
 @import "../figma/ZEN/sass/ZenGlobal"
 @import "../figma/ZEN/sass/section1"
 @import "../figma/ZEN/sass/section2"
@@ -44,3 +43,4 @@
 @import "../figma/ZEN/sass/section4"
 @import "../figma/ZEN/sass/section8"
 @import "../figma/ZEN/sass/footer"
+@import "../figma/ZEN/sass/headerNew"
