--- a/figma/ZEN/sass/headerNew.sass
+++ b/figma/ZEN/sass/headerNew.sass
@@ -69,7 +69,7 @@ li
         font-size: 18px
         color: #222
 
-body._lockZEN
+body.lockZEN
     overflow: hidden
 
 .header-container
@@ -171,15 +171,15 @@ body._lockZEN
         top: 50%
         transform: scale(1) translate(0px, -50%)
 
-    .menu-burgerZEN._active span
+    .menu-burgerZEN.activeHeaderZEN span
         transform: scale(0) translate(0px, -50%)
 
-    .menu-burgerZEN._active::before
+    .menu-burgerZEN.activeHeaderZEN::before
         top: 50%
         transform: rotate(-45deg) translate(0px, -50%)
         background: rgba(255, 255, 255, 0.5)
 
-    .menu-burgerZEN._active::after
+    .menu-burgerZEN.activeHeaderZEN::after
         bottom: 50%
         transform: rotate(45deg) translate(0px, 50%)
         background: rgba(255, 255, 255, 0.5)
@@ -197,7 +197,7 @@ body._lockZEN
         display: inline
         background-color: rgba(0, 0, 0, 0.9)
 
-    .menu-bodyZEN._active
+    .menu-bodyZEN.activeHeaderZEN
         left: 0
         z-index: 3
 
