--- a/sass/Global/pageup.sass
+++ b/sass/Global/pageup.sass
@@ -5,3 +5,8 @@
     right: 40px
     width: 40px
     height: 40px
+
+@media (max-width: 700px)
+    .pageup
+        bottom: 14px
+        right: 14px
