--- a/figma/ZEN/sass/ZenGlobal.sass
+++ b/figma/ZEN/sass/ZenGlobal.sass
@@ -60,3 +60,22 @@ html
         z-index: 2
         margin-left: 0
         padding-left: 0
+
+@media ( min-width: 1050px )
+    .ZENs2h
+        margin-top: 300px
+
+    .ZENs3h
+        margin-top: 200px
+
+    .ZENs4h
+        margin-top: 180px
+
+    .ZENs5h
+        margin-top: 130px
+
+    .ZENs6h
+        margin-top: 190px
+
+    .ZENs7h
+        margin-top: 60px
