fix pageUp in all project

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -22,7 +22,7 @@
 @import "Global/header/header-link"
 @import "Global/header/popap-enter"
 @import "Global/header/popap-registration"
-@import "Global/pageup"
+@import "Global/pageUp"
 @import "404/spider2"
 @import "404/Title"
 @import "Global/advertisement"
