--- a/css/style.css
+++ b/css/style.css
@@ -1550,20 +1550,19 @@ label::before {
   color: white;
 }
 
-.pageup {
+.pageUp {
   display: none;
   position: fixed;
   bottom: 40px;
   right: 40px;
   width: 40px;
   height: 40px;
-  z-index: 25;
 }
 
-@media (max-width: 700px) {
-  .pageup {
-    bottom: 14px;
-    right: 14px;
+@media (max-width: 400px) {
+  .pageUp {
+    bottom: 12px;
+    right: 12px;
   }
 }
 html:hover .spider {
