--- a/sass/Global/pageUp.sass
+++ b/sass/Global/pageUp.sass
@@ -1,13 +1,12 @@
-.pageup
+.pageUp
     display: none
     position: fixed
     bottom: 40px
     right: 40px
     width: 40px
     height: 40px
-    z-index: 25
 
-@media (max-width: 700px)
-    .pageup
-        bottom: 14px
-        right: 14px
+@media ( max-width: 400px )
+    .pageUp
+        bottom: 12px
+        right: 12px
