--- a/sass/Global/pageup.css
+++ b/sass/Global/pageup.css
@@ -1,4 +1,4 @@
-.pageup {
+.pageUp {
   display: none;
   position: fixed;
   bottom: 40px;
@@ -6,4 +6,4 @@
   width: 40px;
   height: 40px;
 }
-/*# sourceMappingURL=pageup.css.map */
+/*# sourceMappingURL=pageUp.css.map */
