--- a/figma/ZEN/sass/headerNew.sass
+++ b/figma/ZEN/sass/headerNew.sass
@@ -231,3 +231,9 @@ body.lockZEN
 
     .header-menu-ZEN
         width: 0
+
+    .headerZEN-RIGHT-button
+        width: 90px
+        height: 45px
+        &-text
+            margin-top: 8px
