--- a/sass/style.sass
+++ b/sass/style.sass
@@ -44,3 +44,5 @@
 @import "../figma/ZEN/sass/section8"
 @import "../figma/ZEN/sass/footer"
 @import "../figma/ZEN/sass/headerNew"
+
+@import "../figma/SOS/sass/headerSOS"
