--- a/figma/SOS/css/all.css
+++ b/figma/SOS/css/all.css
@@ -1638,10 +1638,10 @@ readers do not read off random characters that represent icons */
 .fa-file-word:before {
   content: "\f1c2"; }
 
-.fa-fill:before {
+.fa-logo:before {
   content: "\f575"; }
 
-.fa-fill-drip:before {
+.fa-logo-drip:before {
   content: "\f576"; }
 
 .fa-film:before {
