--- a/figma/SOS/sass/sectionOne.sass
+++ b/figma/SOS/sass/sectionOne.sass
@@ -120,6 +120,11 @@
     text-transform: uppercase
     color: white
 
+@media (max-width: 580px)
+    .Main-title
+        line-height: 70px
+        font-size: 70px
+
 .sub-title
     margin-top: 40px
     font-family: Bebas Neue
