--- a/figma/SOS/sass/sectionOne.sass
+++ b/figma/SOS/sass/sectionOne.sass
@@ -120,11 +120,6 @@
     text-transform: uppercase
     color: white
 
-@media (max-width: 580px)
-    .Main-title
-        line-height: 70px
-        font-size: 70px
-
 .sub-title
     margin-top: 40px
     font-family: Bebas Neue
@@ -174,7 +169,7 @@
     width: 68px
     height: 25px
     margin: 0 auto
-    margin-top: 570px
+    margin-top: 560px
     margin-button: 20px
     cursor: pointer
     animation: animate-TheStory 1s ease infinite
@@ -193,10 +188,18 @@
 
 @keyframes animate-TheStory
     0%
-        margin-top: 570px
-
-    50%
         margin-top: 550px
 
+    50%
+        margin-top: 540px
+
     100%
-        margin-top: 570px
+        margin-top: 550px
+
+@media (max-width: 580px)
+    .Main-title
+        line-height: 70px
+        font-size: 70px
+
+    .the-story
+        margin-top: 500px
