--- a/figma/SOS/sass/sectionThree.sass
+++ b/figma/SOS/sass/sectionThree.sass
@@ -43,6 +43,7 @@
         font-weight: 700
         font-family: Bebas Neue
         padding: 10px 0
+        line-height: 36px
 
     & .s3text1
         width: 360px
@@ -62,6 +63,7 @@
         font-weight: 700
         font-family: Bebas Neue
         padding: 10px 0
+        line-height: 36px
 
     & .s3text2
         width: 360px
@@ -81,6 +83,7 @@
         font-weight: 700
         font-family: Bebas Neue
         padding: 10px 0
+        line-height: 36px
 
     & .s3text3
         width: 360px
@@ -93,3 +96,10 @@
 
 .hidden
     display: none
+
+@media (max-width: 930px)
+    .SOS-S3-container
+        justify-content: flex-start
+
+        .SOS-S3-wrapper
+            padding: 10px
