--- a/figma/SOS/sass/sectionFour.sass
+++ b/figma/SOS/sass/sectionFour.sass
@@ -8,21 +8,21 @@
     position: relative
 
 .s4-h1up-text
-    position: absolute
+    display: block
+    text-align: center
     color: white
     text-transform: uppercase
-    top: 145px
-    left: 570px
+    padding-top: 145px
     font-size: 24px
     line-height: 24px
     font-family: Bebas Neue
 
 .s4-h1main-text
-    position: absolute
+    display: block
+    text-align: center
     color: white
     text-transform: uppercase
-    top: 182px
-    left: 419px
+    padding-top: 20px
     font-size: 60px
     font-family: Bebas Neue
 
