--- a/css/style.css
+++ b/css/style.css
@@ -2624,10 +2624,13 @@ html:hover .spider {
   position: relative;
 }
 
+.SOS-s5-wrapper {
+  display: flex;
+  justify-content: space-around;
+}
+
 .s5h1-up {
-  position: absolute;
-  top: 304px;
-  left: 121px;
+  margin-top: 304px;
   color: white;
   font-weight: 700;
   font-size: 24px;
@@ -2635,9 +2638,7 @@ html:hover .spider {
 }
 
 .s5h1-main {
-  position: absolute;
-  top: 340px;
-  left: 119px;
+  margin-top: 20px;
   color: white;
   font-weight: 700;
   text-transform: uppercase;
@@ -2647,9 +2648,7 @@ html:hover .spider {
 }
 
 .s5h1-text {
-  position: absolute;
-  top: 457px;
-  left: 120px;
+  margin-top: 20px;
   color: white;
   width: 430px;
   font-size: 18px;
@@ -2659,9 +2658,7 @@ html:hover .spider {
 }
 
 .Read-more {
-  position: absolute;
-  top: 630px;
-  left: 124px;
+  margin-top: 50px;
   width: 260px;
   height: 60px;
   background: linear-gradient(#FFB548, #F3AF34);
