--- a/figma/SOS/sass/sectionFive.sass
+++ b/figma/SOS/sass/sectionFive.sass
@@ -7,19 +7,19 @@
     background-size: contain
     position: relative
 
+.SOS-s5-wrapper
+    display: flex
+    justify-content: space-around
+
 .s5h1-up
-    position: absolute
-    top: 304px
-    left: 121px
+    margin-top: 304px
     color: white
     font-weight: 700
     font-size: 24px
     line-height: 24px
 
 .s5h1-main
-    position: absolute
-    top: 340px
-    left: 119px
+    margin-top: 20px
     color: white
     font-weight: 700
     text-transform: uppercase
@@ -28,9 +28,7 @@
     letter-spacing: 3px
 
 .s5h1-text
-    position: absolute
-    top: 457px
-    left: 120px
+    margin-top: 20px
     color: white
     width: 430px
     font-size: 18px
@@ -39,9 +37,7 @@
     font-family: Open Sans
 
 .Read-more
-    position: absolute
-    top: 630px
-    left: 124px
+    margin-top: 50px
     width: 260px
     height: 60px
     background: linear-gradient(#FFB548, #F3AF34)
