--- a/figma/SOS/sass/footerSOS.sass
+++ b/figma/SOS/sass/footerSOS.sass
@@ -55,7 +55,6 @@
     width: 320px
 
 .footer-wrapper
-    position: absolute
     bottom: 5px
     width: 100%
 
@@ -107,7 +106,8 @@
         display: none
 
 @media (max-width: 700px)
-
+    .footer-wrapper
+        margin-top: 200px
     .footer-under
         display: flex
         justify-content: center
