--- a/figma/SOS/sass/sectionSix.sass
+++ b/figma/SOS/sass/sectionSix.sass
@@ -5,16 +5,18 @@
     display: block
     background-position: center
     background-size: contain
-    position: relative
 
 .SOS-S6-wrapper
     display: block
+    margin-top: 20px
     margin: 0 auto
     width: 80%
+    height: 100%
 
 .SOS-S6-inner
     display: flex
     justify-content: space-between
+    margin: 0 auto
 
 .SOS-s6-right
     width: 65%
@@ -125,8 +127,8 @@
 
 @media (max-width: 1300px)
     .SectionSix
-        width: 100%
-        height: auto
+        width: auto
+        height: 100%
     .SOS-S6-inner
         .SOS-s6-left
             poasition: absolute
