--- a/figma/SOS/sass/footerSOS.sass
+++ b/figma/SOS/sass/footerSOS.sass
@@ -107,7 +107,7 @@
 
 @media (max-width: 700px)
     .footer-wrapper
-        margin-top: 200px
+        margin-top: 70px
     .footer-under
         display: flex
         justify-content: center
@@ -136,3 +136,7 @@
 
         .footer-up-imgs
             flex-wrap: wrap
+
+@media (max-width: 350px)
+    .footer-wrapper
+        margin-top: 100px
