--- a/figma/SOS/sass/sectionSix.sass
+++ b/figma/SOS/sass/sectionSix.sass
@@ -63,7 +63,7 @@
 .email
     width: 367px
     height: 60px
-    background: rgba(255, 255, 255, 0.08)
+    background: rgba(255, 255, 255, 0.1)
     border-radius: 5px
 
     &-text
@@ -139,3 +139,39 @@
         .SOS-s6-right
             position: absolute
             display: block
+
+@media (max-width: 700px)
+    .SOSemail-wrapper
+        display: flex
+        justify-content: center
+
+        .ButtonSubscribe
+            margin-top: 20px
+
+    .email
+        width: 250px
+        height: 50%
+
+    .SOS-s6-right
+        width: 100%
+
+    .s6h1-up
+        display: block
+        font-size: 18px
+        width: 80%
+        text-align: center
+
+    .s6h1-main
+        display: block
+        font-size: 30px
+        width: 80%
+        line-height: 30px
+        text-align: center
+
+    .s6h1-text
+        display: block
+        text-align: center
+        width: 80%
+
+        .ButtonSubscribe
+            margin: 0 auto
