--- a/figma/SOS/sass/sectionFour.sass
+++ b/figma/SOS/sass/sectionFour.sass
@@ -25,6 +25,7 @@
     padding-top: 20px
     font-size: 60px
     font-family: Bebas Neue
+    line-height: 45px
 
 .table
     width: 267px
@@ -128,3 +129,15 @@
     position: absolute
     top: 606px
     left: 753px
+
+@media (max-width: 700px)
+    .s4-h1up-text
+        font-size: 16px
+
+    .s4-h1main-text
+        font-size: 40px
+
+@media (max-width: 330px)
+    .s4-h1main-text
+        font-size: 30px
+        line-height: 30px
