--- a/figma/SOS/sass/sectionSix.sass
+++ b/figma/SOS/sass/sectionSix.sass
@@ -75,6 +75,7 @@
         color: #FFFFFF
 
     &-email
+
         .field-email
             color: #FFB548
             background-color: transparent
@@ -139,6 +140,10 @@
         .SOS-s6-right
             position: absolute
             display: block
+
+        .email
+            width: 250px
+            height: 50%
 
 @media (max-width: 700px)
     .SOSemail-wrapper
